# modern-pki

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  roadmap.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  acme-client-compatibility.md  acme-rfc8555-conformance.md
docs/adr/: 0001-ca-backend-selection.md  0002-acme-adoption.md  0003-hsm-kms-strategy.md
docs/architecture/: ca-hierarchy.md  issuance-flow.md  pki-context.md  renewal-flow.md  revocation-flow.md
docs/operations/: backup-restore-runbook.md  issuance-runbook.md  key-ceremony.md  mass-revocation-plan.md  renewal-runbook.md  revocation-runbook.md
docs/policy/: algorithm-policy.md  certificate-profiles.md  cp-cps-map.md
docs/reference/: api-errors.md  audit-metadata.md  compliance-matrix.md  core-boundary-integration.md  core-cli-contract.md  fuzzing.md  improvement-analysis-alignment.md  issuance-consistency.md  observability.md  openapi.json  project-scope.md  release-evidence.md  release-readiness-action-plan.md  state-transitions.md  target-architecture.md  webhook-receivers.md
docs/runbooks/: bootstrap-api-key.md  incident-response.md  manual-demo.md  production-deployment.md  production-recovery.md  public-tls-readiness.md  release-process.md  webhook-outbox-safety.md
docs/security/: audit-log-schema.md  threat-model.md
include/modern_pki/: version.hpp
include/modern_pki/core/: crl.hpp  csr.hpp  issue.hpp  ocsp.hpp
include/modern_pki/crypto/: backend.hpp
scripts/: security-baseline-scan.py  test_security_baseline_scan.py  test_validate_core_cli_contracts.py  test_validate_release_evidence.py  test_validate_service_contracts.py  test_verify_local.py  test_webhook_receiver_verification.py  validate-core-cli-contracts.py  validate-docs.py  validate-release-evidence.py  validate-service-contracts.py  verify-local.ps1  webhook_receiver_verification.py
scripts/acme-smoke/: README.md  acme-https-proxy.go  run-certbot-smoke.ps1  test-run-certbot-smoke.ps1
service/: README.md  go.mod  go.sum
service/cmd/modern-pki-service/: main.go  main_test.go
service/internal/corecli/: runner.go  runner_integration_test.go  runner_test.go
service/internal/domain/: errors.go  types.go
service/internal/httpapi/: acme.go  metrics.go  nonce_sql.go  server.go  server_test.go
service/internal/lifecycle/: caa.go  caa_test.go  expiration_scan_worker.go  expiration_scan_worker_test.go  outbox_dispatcher.go  outbox_dispatcher_test.go  outbox_events_test.go  outbox_handler.go  outbox_handler_test.go  outbox_worker.go  outbox_worker_test.go  service.go  service_test.go  webhook_handler.go  webhook_handler_test.go
service/internal/observability/: metrics.go
service/internal/store/: memory.go  memory_test.go  migrate.go  migrate_test.go  outbox_test.go  postgres_parity_test.go  sqlstore.go  sqlstore_acme.go  sqlstore_audit.go  sqlstore_certificate.go  (+2 more)
src/: version.cpp
src/cli/: main.cpp
src/core/: crl.cpp  csr.cpp  issue.cpp  ocsp.cpp
tests/: core_cli_contract_test.cpp  core_crl_test.cpp  core_issue_profile_test.cpp  core_ocsp_test.cpp  version_test.cpp
tests/fuzz/: core_parser_fuzz.cpp
(+5 files in other folders)
